--- a/asansor/app/src/main/res/layout/activity_qrcode_bakim.xml
+++ b/asansor/app/src/main/res/layout/activity_qrcode_bakim.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ext.asansor.Activities.QRCodeActivity">
+    tools:context=".Activities.QRCodeBakimActivity">
 
 </android.support.constraint.ConstraintLayout>
