--- a/asansor/app/src/main/res/layout/activity_ariza_sec.xml
+++ b/asansor/app/src/main/res/layout/activity_ariza_sec.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/deneme"
     android:layout_height="match_parent"
-    tools:context="com.example.ext.asansor.Activities.BakimSecActivity">
+    tools:context=".Activities.ArizaSecActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
