--- a/asansor/app/src/main/res/layout/activity_bakim.xml
+++ b/asansor/app/src/main/res/layout/activity_bakim.xml
@@ -174,7 +174,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/mybutton"
-                android:text="Bakım Başlat"/>
+                android:text="Bakım Bitir"/>
 
 
 
