--- a/asansor/app/src/main/res/layout/activity_main.xml
+++ b/asansor/app/src/main/res/layout/activity_main.xml
@@ -115,11 +115,15 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
+
+
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="8dp"
+            android:layout_marginTop="12dp"
             android:layout_marginRight="100dp"
             android:layout_marginLeft="100dp"
 
