--- a/asansor/app/src/main/res/layout/activity_bakim_sec.xml
+++ b/asansor/app/src/main/res/layout/activity_bakim_sec.xml
@@ -1,48 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/deneme"
     android:layout_height="match_parent"
-    tools:context="com.example.ext.asansor.Activities.BakimSecActivity">
+    android:background="@drawable/deneme"
+    android:orientation="vertical">
+
+    <FrameLayout
+        android:id="@+id/fm_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:layout_weight=".6"
+        android:visibility="visible" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:layout_weight=".4"
+        android:orientation="vertical">
+
         <Button
+            android:id="@+id/btn_fragment"
             android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:text="QR Code"
+            android:layout_gravity="center"
+            android:layout_height="40dp"
             android:background="@drawable/mybutton"
-            android:id="@+id/QRCodeBakim"
-            android:layout_marginBottom="40dp"/>
+            android:text="QR Code" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:textColor="#fff"
             android:textSize="20dp"
             android:text="asansor id manual giris"/>
+
         <EditText
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginTop="12dp"
             android:id="@+id/manualgirisEditText"
+            android:layout_gravity="center"
             android:gravity="center"
             android:textColor="#fff"
             android:hint="id"/>
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:background="@drawable/mybutton"
             android:id="@+id/manualgirisOnayButton"
-            android:text="Onarım Başlat"/>
+            android:text="Bakım Başlat"/>
+
+        <TextView
+            android:id="@+id/tv_result_head"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp" />
+
     </LinearLayout>
+
 
 </LinearLayout>
