--- a/asansor/app/src/main/res/layout/activity_ariza.xml
+++ b/asansor/app/src/main/res/layout/activity_ariza.xml
@@ -22,20 +22,30 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="baslik"
+
         android:textColor="#fff"
         android:layout_below="@id/arizaEkrani"
         android:id="@+id/baslikAriza"
         android:textSize="28dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#fff" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="binaadi"
+
         android:textColor="#fff"
         android:id="@+id/binaadiAriza"
         android:layout_below="@id/baslikAriza"
         android:textSize="28dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#fff" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp" />
@@ -43,10 +53,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seciliArizaAriza"
-        android:text="Seçili arıza: Tarih"
         android:textColor="#fff"
         android:layout_below="@id/binaadiAriza"
         android:textSize="20dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#fff" />
     <ScrollView
         android:layout_width="match_parent"
         android:id="@+id/ArizaEkraniScrool"
