--- a/asansor/app/src/main/res/layout/activity_bakim.xml
+++ b/asansor/app/src/main/res/layout/activity_bakim.xml
@@ -21,20 +21,30 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="baslik"
+
         android:textColor="#fff"
         android:layout_below="@id/bakimEkrani"
         android:id="@+id/baslikBakim"
         android:textSize="28dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#fff" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="binaadi"
+
         android:textColor="#fff"
         android:id="@+id/binaadiBakim"
         android:layout_below="@id/baslikBakim"
         android:textSize="28dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#fff" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp" />
@@ -43,9 +53,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/tarihBakim"
         android:textColor="#fff"
-        android:text="secilibakim: Tarih"
+
         android:layout_below="@id/binaadiBakim"
         android:textSize="20dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#fff" />
     <ScrollView
         android:layout_width="match_parent"
         android:id="@+id/BakimEkraniScrool"
