--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -18,11 +18,13 @@
             android:layout_height="60dp"
             android:orientation="horizontal">
 
-            <ImageView
+            <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="30dp"
                 android:layout_marginTop="5dp"
+                android:clickable="true"
+                android:id="@+id/backbutton"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="15dp"
