--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_chat"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="72dp"
         card_view:cardElevation="10dp"
         android:layout_alignParentTop="true">
 
@@ -34,8 +34,11 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/chat_username_textview"
-                android:gravity="center"
+                android:gravity="left"
                 android:textStyle="bold"
+                android:textSize="32dp"
+                android:hint="arda"
+                android:layout_marginTop="12dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="10"/>
