--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -97,9 +97,10 @@
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="8dp"
+        android:padding="8dp"
+        android:background="#00818a"
+        android:textColor="#fff"
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
@@ -111,14 +112,15 @@
             android:orientation="horizontal"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_height="wrap_content">
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="30dp"
-                android:padding="10dp"
-                android:background="@color/colorPrimaryDark"
+                android:layout_marginTop="20dp"
+                android:padding="8dp"
+                android:textColor="#fff"
+                android:background="#8bbabb"
                 android:layout_gravity="right"
                 android:layout_marginRight="5dp"
                 android:layout_height="wrap_content"
@@ -128,9 +130,10 @@
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="30dp"
-                android:padding="10dp"
-                android:background="@color/colorPrimaryDark"
+                android:layout_marginTop="20dp"
+                android:padding="8dp"
+                android:textColor="#fff"
+                android:background="#8bbabb"
                 android:layout_gravity="right"
                 android:layout_marginLeft="5dp"
                 android:layout_height="wrap_content"
