--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -9,7 +9,8 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_chat"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="56dp"
+        card_view:cardBackgroundColor="#8bbabb"
         card_view:cardElevation="10dp"
         android:layout_alignParentTop="true">
 
@@ -21,23 +22,23 @@
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="30dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="8dp"
                 android:clickable="true"
                 android:id="@+id/backbutton"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/back_image"/>
+                android:layout_marginBottom="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/leftarrow"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/chat_username_textview"
                 android:gravity="left"
+                android:textColor="#fff"
                 android:textStyle="bold"
-                android:textSize="32dp"
-                android:hint="arda"
+                android:textSize="24dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
@@ -49,24 +50,20 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_above="@id/card_view_chat_bottom"
         android:layout_below="@id/card_view_chat"
+        android:layout_above="@id/linear"
         android:id="@+id/chat_recycler_view"
         android:background="@drawable/background_image_chat"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view_chat_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        card_view:cardBackgroundColor="#dfe6e9"
-        card_view:cardElevation="5dp"
-        android:layout_alignParentBottom="true">
+
         <LinearLayout
             android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/linear"
             android:gravity="center"
+            android:background="#8bbabb"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal">
 
@@ -75,11 +72,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:hint="Mesaj gir"
+                android:background="@drawable/mybutton"
                 android:id="@+id/mesajTextEdittext"
-                android:minHeight="50dp"
-                android:layout_marginRight="5dp"
+                android:minHeight="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginBottom="4dp"
-                android:background="#fff"
                 android:paddingLeft="12dp"
                 android:inputType="text"
                 />
@@ -88,14 +86,13 @@
                 android:layout_width="0dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="12dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="12dp"
-                android:backgroundTint="@color/colorPrimary"
+                android:background="@drawable/mybuttonsend"
                 android:id="@+id/sendMessageButton"
 
                 android:layout_weight="1"/>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
 
 
 </RelativeLayout>
