--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="8dp"
         android:padding="8dp"
-        android:background="#00818a"
+        android:background="#216583"
         android:textColor="#fff"
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
@@ -120,7 +120,7 @@
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:textColor="#fff"
-                android:background="#8bbabb"
+                android:background="#216583"
                 android:layout_gravity="right"
                 android:layout_marginRight="5dp"
                 android:layout_height="wrap_content"
@@ -133,7 +133,7 @@
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:textColor="#fff"
-                android:background="#8bbabb"
+                android:background="#216583"
                 android:layout_gravity="right"
                 android:layout_marginLeft="5dp"
                 android:layout_height="wrap_content"
