--- a/nobetciezcane/app/src/main/res/layout/activity_main.xml
+++ b/nobetciezcane/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,60 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="İstanbul Nöbetçi Eczaneler"
+        android:textColor="@color/colorPrimaryDark"/>
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="#dff0ea"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="5dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_height="40dp">
+
+
 
     <Spinner
         android:id="@+id/ilceSpinner"
+        android:layout_weight="8"
+        android:layout_marginRight="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_height="match_parent"></Spinner>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:textColor="#fff"
+        android:textSize="8dp"
+        android:layout_marginRight="8dp"
         android:text="Listele"
+        android:background="@drawable/mybuttonsend"
         android:id="@+id/listeleButton"/>
+
+
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
     <ListView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview"></ListView>
+
+
 
 </LinearLayout>
