--- a/nobetciezcane/app/src/main/res/layout/layout.xml
+++ b/nobetciezcane/app/src/main/res/layout/layout.xml
@@ -1,85 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:background="#00a79d"
-    android:layout_margin="4dp"
-    android:layout_height="wrap_content">
+    android:background="#fff"
+    android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="eczane"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:gravity="center"
-        android:id="@+id/eczaneIsim"/>
+        android:layout_margin="5dp"
+        android:background="#fff"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="eczane"
+            android:textSize="20dp"
+            android:background="#fff"
+            android:textStyle="bold"
+            android:textColor="#293462"
+            android:gravity="center"
+            android:id="@+id/eczaneIsim"/>
+        <TextView
+            android:layout_marginLeft="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:text="Adres"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:textColor="#293462"
+            android:id="@+id/eczaneAdres"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#fff"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Telefon"
+                    android:textSize="12dp"
+                    android:textStyle="bold"
+                    android:textColor="#293462"
+                    android:id="@+id/eczaneTelefon"/>
 
-    <TextView
-        android:layout_marginLeft="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Adres"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:id="@+id/eczaneAdres"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="ara"
+                    android:textSize="10dp"
+                    android:layout_height="12dp"
+                    android:background="@drawable/mybuttonsend"
+                    android:textColor="#fff"
+                    android:id="@+id/aramaYap"
+                    />
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:layout_marginLeft="4dp"
-        android:layout_weight="3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Telefon"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:id="@+id/eczaneTelefon"/>
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:text="ara"
-            android:layout_margin="4dp"
-            android:background="#fff1c1"
-            android:id="@+id/aramaYap"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fax"
-        android:layout_marginLeft="4dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:id="@+id/eczaneFax"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#fff"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Adres Tarifi"
+                    android:textSize="12dp"
+                    android:textStyle="bold"
+                    android:textColor="#293462"
+                    android:id="@+id/eczaneAdresTarifi"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Adres Tarifi"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="4dp"
-        android:textColor="#fff"
-        android:id="@+id/eczaneAdresTarifi"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:textSize="10dp"
+                    android:text="harita"
+                    android:layout_height="12dp"
+                    android:background="@drawable/mybuttonsend"
+                    android:textColor="#fff"
+                    android:id="@+id/eczaneHaritadaGoster"
+                    />
+            </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Haritada Goster"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginLeft="60dp"
-        android:textStyle="bold"
-        android:layout_marginBottom="12dp"
-        android:background="#fff1c1"
-        android:id="@+id/eczaneHaritadaGoster"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#fff"
+                android:textSize="0dp"
+                android:textColor="#fff"
+                android:id="@+id/eczaneFax"/>
+        </LinearLayout>
+
+
+
+
+
+
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
