--- a/sohbetuygulamasi/app/src/main/res/layout/message_received_layout.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/message_received_layout.xml
@@ -20,12 +20,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="36dp"
         android:layout_marginTop="12dp"
         android:textStyle="bold"
         android:layout_marginBottom="12dp"
         android:id="@+id/message_reveived_text"/>
+        <TextView
+            android:layout_width="36dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="124dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="12dp"
+            android:textStyle="bold"
+            android:layout_marginBottom="12dp"
+            android:id="@+id/message_reveived_date"/>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
