--- a/sohbetuygulamasi/app/src/main/res/layout/message_sent_layout.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/message_sent_layout.xml
@@ -21,12 +21,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="36dp"
             android:layout_marginTop="12dp"
             android:textColor="#fff"
             android:textStyle="bold"
             android:layout_marginBottom="12dp"
             android:id="@+id/message_sent_text"/>
+
+        <TextView
+            android:layout_width="36dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="124dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="12dp"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:layout_marginBottom="12dp"
+            android:id="@+id/message_sent_date"/>
     </android.support.v7.widget.CardView>
 </LinearLayout>
