--- a/nobetciezcane - map dneeme/app/src/main/res/layout/activity_main.xml
+++ b/nobetciezcane - map dneeme/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,18 @@
         android:background="@drawable/mybuttonsend"
         android:id="@+id/listeleButton"/>
 
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:textColor="#fff"
+            android:textSize="8dp"
+            android:layout_marginRight="8dp"
+            android:text="haritaa"
+            android:background="@drawable/mybuttonsend"
+            android:id="@+id/gmButton"/>
+
 
     </LinearLayout>
 
