--- a/nobetciezcane - map dneeme/app/src/main/res/layout/layout.xml
+++ b/nobetciezcane - map dneeme/app/src/main/res/layout/layout.xml
@@ -6,6 +6,7 @@
 
     <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
