--- a/nobetciezcane/app/src/main/res/layout/activity_main.xml
+++ b/nobetciezcane/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:text="İstanbul Nöbetçi Eczaneler"
-        android:textColor="@color/colorPrimaryDark"/>
+        android:textStyle="bold"
+        android:textColor="#2c3e50"/>
 
 
 
@@ -20,7 +22,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_height="40dp">
+        android:layout_height="wrap_content">
 
 
 
@@ -32,8 +34,8 @@
         android:layout_height="match_parent"></Spinner>
 
     <Button
-        android:layout_width="60dp"
-        android:layout_height="24dp"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:textColor="#fff"
@@ -45,6 +47,10 @@
 
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#293462"/>
 
 
 
