--- a/nobetciezcane/app/src/main/res/layout/layout.xml
+++ b/nobetciezcane/app/src/main/res/layout/layout.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true"
     android:layout_height="match_parent">
+
 
     <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -21,7 +26,7 @@
             android:textSize="20dp"
             android:background="#fff"
             android:textStyle="bold"
-            android:textColor="#293462"
+            android:textColor="#273c75"
             android:gravity="center"
             android:id="@+id/eczaneIsim"/>
         <TextView
@@ -32,7 +37,7 @@
             android:text="Adres"
             android:textSize="12dp"
             android:textStyle="bold"
-            android:textColor="#293462"
+            android:textColor="#273c75"
             android:id="@+id/eczaneAdres"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,7 +52,7 @@
                     android:text="Telefon"
                     android:textSize="12dp"
                     android:textStyle="bold"
-                    android:textColor="#293462"
+                    android:textColor="#00a8ff"
                     android:id="@+id/eczaneTelefon"/>
 
                 <Button
@@ -55,7 +60,7 @@
                     android:layout_weight="0.5"
                     android:text="ara"
                     android:textSize="10dp"
-                    android:layout_height="12dp"
+                    android:layout_height="32dp"
                     android:background="@drawable/mybuttonsend"
                     android:textColor="#fff"
                     android:id="@+id/aramaYap"
@@ -67,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#fff"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_marginLeft="4dp"
@@ -76,7 +82,7 @@
                     android:text="Adres Tarifi"
                     android:textSize="12dp"
                     android:textStyle="bold"
-                    android:textColor="#293462"
+                    android:textColor="#00a8ff"
                     android:id="@+id/eczaneAdresTarifi"/>
 
                 <Button
@@ -84,7 +90,7 @@
                     android:layout_weight="0.5"
                     android:textSize="10dp"
                     android:text="harita"
-                    android:layout_height="12dp"
+                    android:layout_height="32dp"
                     android:background="@drawable/mybuttonsend"
                     android:textColor="#fff"
                     android:id="@+id/eczaneHaritadaGoster"
@@ -108,4 +114,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
