--- a/nobetciezcane/app/src/main/res/layout/layout.xml
+++ b/nobetciezcane/app/src/main/res/layout/layout.xml
@@ -48,7 +48,8 @@
                     android:layout_marginLeft="4dp"
                     android:layout_weight="3"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:gravity="center|left"
+                    android:layout_height="match_parent"
                     android:text="Telefon"
                     android:textSize="12dp"
                     android:textStyle="bold"
@@ -73,13 +74,15 @@
                 android:layout_height="wrap_content"
                 android:background="#fff"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_marginLeft="4dp"
                     android:layout_weight="3"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="Adres Tarifi"
+                    android:gravity="center|left"
                     android:textSize="12dp"
                     android:textStyle="bold"
                     android:textColor="#00a8ff"
