--- a/nobetciezcane/app/src/main/res/layout/activity_main.xml
+++ b/nobetciezcane/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:id="@+id/deneme"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/gradient_1"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="İstanbul Nöbetçi Eczaneler"
+        android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="#2c3e50"/>
+        android:textColor="#fff"/>
 
 
 
@@ -52,7 +60,12 @@
         android:layout_height="2dp"
         android:background="#293462"/>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="#ecf0f1"
+        android:layout_height="match_parent">
 
     <ListView
         android:layout_marginTop="10dp"
@@ -60,6 +73,6 @@
         android:layout_height="match_parent"
         android:id="@+id/listview"></ListView>
 
-
+    </LinearLayout>
 
 </LinearLayout>
