--- a/nobetciezcane/app/src/main/res/drawable/gradient_1.xml
+++ b/nobetciezcane/app/src/main/res/drawable/gradient_1.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:angle="225"
-        android:endColor="#21d6d3"
-        android:startColor="#044fab" />
+        android:angle="270"
+        android:endColor="#60bdea"
+        android:startColor="#064acb" />
 </shape>
 
 
