--- a/nobetciezcane/app/src/main/res/layout/activity_main.xml
+++ b/nobetciezcane/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,11 @@
         android:layout_marginBottom="8dp"
         android:layout_height="wrap_content">
 
-
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_marginLeft="4dp"
+        android:background="@drawable/ddd"
+        android:layout_height="40dp" />
 
     <Spinner
         android:id="@+id/ilceSpinner"
@@ -63,8 +67,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/listLayout"
         android:layout_width="match_parent"
-        android:background="#ecf0f1"
+        android:background="@drawable/eczaneback"
         android:layout_height="match_parent">
 
     <ListView
