--- a/nobetciezcane/app/src/main/res/layout/layout.xml
+++ b/nobetciezcane/app/src/main/res/layout/layout.xml
@@ -19,17 +19,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_marginLeft="4dp"
+                android:background="@drawable/ddd"
+                android:layout_height="40dp" />
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="eczane"
-            android:textSize="20dp"
+            android:textSize="16dp"
+            android:layout_marginLeft="12dp"
             android:background="#fff"
             android:textStyle="bold"
             android:textColor="#273c75"
             android:gravity="center"
             android:id="@+id/eczaneIsim"/>
-        <TextView
+        </LinearLayout>
+            <TextView
             android:layout_marginLeft="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,7 +96,7 @@
                     android:gravity="center|left"
                     android:textSize="12dp"
                     android:textStyle="bold"
-                    android:textColor="#00a8ff"
+                    android:textColor="#273c75"
                     android:id="@+id/eczaneAdresTarifi"/>
 
                 <Button
