--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -63,82 +63,142 @@
             android:id="@+id/input_egitim"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="eğitim durumu" />
+            android:hint="Sahip" />
 
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+
+            android:layout_marginBottom="12dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:hint="Irk"
+                android:layout_marginRight="8dp"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:id="@+id/irkSpinner"
+                android:layout_weight="8"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></Spinner>
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="12dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:hint="Cinsiyet"
+                android:layout_marginRight="8dp"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:id="@+id/cinsiyetSpinner"
+                android:layout_weight="8"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></Spinner>
+
+        </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="20dp"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/input_dogumTarihi"
+        <TextView
+            android:layout_width="wrap_content"
+            android:hint="Semt"
+            android:layout_marginRight="8dp"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/ilceSpinner"
+            android:layout_weight="8"
+            android:layout_marginRight="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Dogum tarihi" />
+            android:layout_height="match_parent"></Spinner>
 
-    </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/input_hakkimda"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Hakkimda" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_height="wrap_content">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/input_dogumTarihi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Not" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_marginTop="8dp"
-        android:padding="8dp"
-        android:background="#216583"
-        android:textColor="#fff"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/bilgiGuncelleButon"
-        android:text="Bilgi Guncelle"/>
+        </android.support.design.widget.TextInputLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="8dp"
             android:layout_height="wrap_content">
             <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="80dp"
+                android:layout_marginTop="8dp"
+                android:padding="8dp"
+                android:background="@drawable/mybuttonsend"
+                android:textSize="8dp"
+                android:textColor="#fff"
+                android:layout_gravity="right"
+                android:layout_marginRight="20dp"
+                android:layout_height="40dp"
+                android:id="@+id/bilgiGuncelleButon"
+                android:text="Guncelle"/>
+            <Button
+                android:layout_width="80dp"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
+                android:textSize="8dp"
                 android:textColor="#fff"
-                android:background="#216583"
+                android:background="@drawable/mybuttonsend"
                 android:layout_gravity="right"
-                android:layout_marginRight="5dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:id="@+id/bilgiIstekButonu"
                 android:text="istekler"/>
 
             <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="80dp"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
+                android:textSize="8dp"
+                android:layout_marginLeft="20dp"
                 android:textColor="#fff"
-                android:background="#216583"
+                android:background="@drawable/mybuttonsend"
                 android:layout_gravity="right"
-                android:layout_marginLeft="5dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:id="@+id/bilgiArkadasButon"
-                android:text="Arkadaslarınız"/>
+                android:text="Arkadasların"/>
+
+
 
 
         </LinearLayout>
