--- a/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
@@ -5,8 +5,25 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:attr/windowBackground"
     tools:context=".Acitivity.AnaActivity">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/baslik"
+        android:orientation="horizontal"
+        android:background="?android:attr/windowBackground"
+        android:layout_height="8dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textSize="28dp"
+            android:layout_marginLeft="12dp"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -14,8 +31,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="5dp"
+        android:layout_below="@+id/baslik"
         android:layout_above="@+id/navigation"
-        android:layout_below="@+id/filtre"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="50dp">
 
