--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -162,7 +162,7 @@
             android:layout_marginTop="8dp"
             android:layout_height="wrap_content">
             <Button
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_marginTop="8dp"
                 android:padding="8dp"
                 android:background="@drawable/mybuttonsend"
@@ -170,23 +170,23 @@
                 android:textColor="#fff"
                 android:layout_gravity="right"
                 android:layout_marginRight="20dp"
-                android:layout_height="40dp"
+                android:layout_height="32dp"
                 android:id="@+id/bilgiGuncelleButon"
                 android:text="Guncelle"/>
             <Button
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:textSize="8dp"
                 android:textColor="#fff"
                 android:background="@drawable/mybuttonsend"
                 android:layout_gravity="right"
-                android:layout_height="40dp"
+                android:layout_height="32dp"
                 android:id="@+id/bilgiIstekButonu"
                 android:text="istekler"/>
 
             <Button
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:textSize="8dp"
@@ -194,9 +194,9 @@
                 android:textColor="#fff"
                 android:background="@drawable/mybuttonsend"
                 android:layout_gravity="right"
-                android:layout_height="40dp"
+                android:layout_height="32dp"
                 android:id="@+id/bilgiArkadasButon"
-                android:text="Arkadasların"/>
+                android:text="Arkadas"/>
 
 
 
