--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_user_profile.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_user_profile.xml
@@ -47,192 +47,202 @@
                 android:textColor="#4f5573"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp">
+            <!--          <LinearLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:orientation="horizontal"
+                         android:layout_marginLeft="20dp"
+                         android:layout_marginTop="20dp">
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="50dp"
-                    android:background="@drawable/takip_say"/>
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:layout_marginLeft="50dp"
+                             android:background="@drawable/takip_say"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"/>
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="wrap_content"
+                             android:layout_weight="2"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:layout_marginRight="70dp"
-                    android:background="@drawable/arkadas_say"/>
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:layout_marginRight="70dp"
+                             android:background="@drawable/arkadas_say"/>
 
-            </LinearLayout>
+                     </LinearLayout>   -->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp">
+                     <LinearLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:orientation="horizontal"
+                         android:layout_marginLeft="20dp"
+                         android:layout_marginTop="5dp">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:id="@+id/userProfileArkadasText"
-                    android:text="0 arkadas"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="50dp"/>
-
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:layout_marginRight="50dp"
-                    android:text="0 takipçi"
-                    android:id="@+id/userProfileTakipText"
-                    android:textStyle="bold"/>
+                         <TextView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:id="@+id/userProfileArkadasText"
+                             android:text="0 arkadas"
+                             android:textStyle="bold"
+                             android:layout_marginLeft="50dp"/>
 
 
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:layout_marginLeft="20dp"
-                android:textStyle="bold"
-                android:textColor="#2b0e72"
-                android:text="Genel Bilgiler"
-                android:layout_marginTop="10dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textColor="#353190"
-                android:layout_marginLeft="20dp"
-                android:id="@+id/userProfileNameText"
-                android:text="Sahip"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textColor="#353190"
-                android:id="@+id/userProfileEgitimText"
-                android:layout_marginLeft="20dp"
-                android:text="egitim"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/userProfileDogumText"
-                android:textColor="#353190"
-                android:layout_marginLeft="20dp"
-                android:text="dogumtarihi"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/userProfileHakkimdaText"
-                android:textColor="#353190"
-                android:layout_marginLeft="20dp"
-                android:text="hakkında"/>
-
-            </LinearLayout>
+                         <TextView
+                             android:layout_width="0dp"
+                             android:layout_height="wrap_content"
+                             android:layout_weight="1"/>
+                         <TextView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:layout_marginRight="50dp"
+                             android:text="0 takipçi"
+                             android:id="@+id/userProfileTakipText"
+                             android:textStyle="bold"/>
 
 
 
+                     </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp">
+                     <LinearLayout
+                         android:layout_width="match_parent"
+                         android:orientation="vertical"
+                         android:layout_height="wrap_content">
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="40dp"
-                    android:id="@+id/userProfileArkadasImage"/>
+                     <TextView
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/userProfileMesajImage"
-                    android:background="@drawable/mesaj_gonder"
-                    android:layout_weight="1"/>
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:textSize="15dp"
+                         android:layout_marginLeft="20dp"
+                         android:textStyle="bold"
+                         android:textColor="#2b0e72"
+                         android:text="Genel Bilgiler"
+                         android:layout_marginTop="10dp"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="40dp"
-                    android:id="@+id/userProfileTakipImage"
-                    android:layout_marginRight="30dp"
-                    />
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="10dp"
+                         android:textColor="#353190"
+                         android:layout_marginLeft="20dp"
+                         android:id="@+id/userProfileNameText"
+                         android:text="Sahip"/>
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="5dp"
+                         android:textColor="#353190"
+                         android:id="@+id/userProfileEgitimText"
+                         android:layout_marginLeft="20dp"
+                         android:text="egitim"/>
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="5dp"
+                         android:id="@+id/userProfileDogumText"
+                         android:textColor="#353190"
+                         android:layout_marginLeft="20dp"
+                         android:text="dogumtarihi"/>
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="5dp"
+                         android:id="@+id/userProfileHakkimdaText"
+                         android:textColor="#353190"
+                         android:layout_marginLeft="20dp"
+                         android:text="hakkında"/>
 
-            </LinearLayout>
+                         <TextView
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:layout_marginTop="5dp"
+                             android:id="@+id/userProfileNotText"
+                             android:textColor="#353190"
+                             android:layout_marginLeft="20dp"
+                             android:text="not"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="25dp"
-                    android:text="Arkadas ekle"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textStyle="bold"
-                    android:text="Mesaj Gönder"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:text="Takip et"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
+                     </LinearLayout>
 
 
 
-        </LinearLayout>
+
+                     <LinearLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:orientation="horizontal"
+                         android:layout_marginLeft="30dp"
+                         android:layout_marginTop="30dp">
+
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:layout_marginLeft="20dp"
+                             android:layout_marginRight="40dp"
+                             android:id="@+id/userProfileArkadasImage"/>
+
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:id="@+id/userProfileMesajImage"
+                             android:background="@drawable/mesaj_gonder"
+                             android:layout_weight="1"/>
+
+                         <ImageView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:layout_marginLeft="40dp"
+                             android:id="@+id/userProfileTakipImage"
+                             android:layout_marginRight="30dp"
+                             />
+
+                     </LinearLayout>
+
+                     <LinearLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:orientation="horizontal"
+                         android:layout_marginLeft="20dp"
+                         android:layout_marginTop="5dp">
+
+                         <TextView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:layout_marginLeft="25dp"
+                             android:text="Arkadas ekle"
+                             android:textStyle="bold"/>
+
+                         <TextView
+                             android:layout_width="0dp"
+                             android:layout_height="wrap_content"
+                             android:layout_weight="1"
+                             android:textStyle="bold"
+                             android:text="Mesaj Gönder"/>
+
+                         <TextView
+                             android:layout_width="0dp"
+                             android:layout_height="50dp"
+                             android:layout_weight="1"
+                             android:text="Takip et"
+                             android:textStyle="bold"/>
+
+                     </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+
+                 </LinearLayout>
 
 
-</LinearLayout>
+             </android.support.v7.widget.CardView>
+
+
+         </LinearLayout>
