--- a/sohbetuygulamasi/app/src/main/res/layout/userlayout.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/userlayout.xml
@@ -16,20 +16,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="70dp"
-                android:layout_weight="1"
-                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:layout_gravity="center_vertical|left"
                 android:layout_margin="10dp"
                 android:id="@+id/userimage"
                 android:layout_height="70dp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="16dp"
-                android:layout_weight="1"
+                android:layout_weight="0"
                 android:layout_margin="10dp"
                 android:layout_gravity="center"
                 android:id="@+id/user_state_img"
@@ -39,6 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/usernameTextview"
+                android:textStyle="bold"
                 android:layout_margin="10dp"
                 android:layout_gravity="center"/>
         </LinearLayout>
