--- a/sohbetuygulamasi/app/src/main/res/layout/userlayout.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/userlayout.xml
@@ -38,21 +38,39 @@
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/usernameTextview"
-                android:textStyle="bold"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/msjTextview"
-                android:textStyle="bold"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/usernameTextview"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:text="arda"
+                        android:textSize="20dp"
+                        android:layout_margin="10dp"
+                        android:layout_gravity="center"/>
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="0"
+                        android:layout_marginRight="12dp"
+                        android:id="@+id/messageImage"
+                        android:background="@drawable/message3"/>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/msjTextview"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"/>
+
             </LinearLayout>
         </LinearLayout>
 
