--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/kullaniciIsmi"
         android:enabled="true"
+        android:hint="İsim"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="10dp"
