--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
@@ -51,10 +51,7 @@
             android:background="@drawable/filtre"/>
 
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#293462"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="vertical"
@@ -82,9 +79,9 @@
 
             <Button
                 android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_height="30dp"
+                android:text="Uygula"
                 android:id="@+id/filtreleButton"
-                android:background="@drawable/mybuttonfiltre"
                 android:layout_gravity="right"
                 android:layout_marginRight="20dp"
                 android:textColor="#fff"/>
